# di-memory-analyzer

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/di_memory/analyzers/: __init__.py  base.py  kasan.py  page.py  slub.py
src/di_memory/backend/: __init__.py  protocol.py
src/di_memory/core/: __init__.py  address_translator.py  kernel_resolver.py  stackdepot.py  struct_helper.py
src/di_memory/corruption/: __init__.py  bitflip.py  detector.py  freelist.py  helpers.py  kasan.py
src/di_memory/utils/: __init__.py  constants.py  flags.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/analyzers/: __init__.py  test_kasan.py  test_page.py  test_slub.py
tests/unit/core/: test_stackdepot.py
tests/unit/corruption/: __init__.py  test_bitflip.py  test_detector.py  test_freelist.py  test_helpers.py  test_kasan_fault.py
tests/unit/utils/: __init__.py  test_flags.py
