[project]
name = "di-memory"
version = "0.1.0"
description = "Memory analysis module for Linux kernel RAMDUMP in DI Notebook environments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "dongseok lee" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/di_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/di_memory"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
